:bug: projects align

--- a/assets/src/scss/pages/_projects.scss
+++ b/assets/src/scss/pages/_projects.scss
@@ -12,7 +12,6 @@
 }
 
 .projects__block {
-  align-items: center;
   border: 1px solid $dark-grey;
   border-left: none;
   border-top: none;
